tests/invalid/runtime/string_to_float_invalid.pts
function main() : void {
    string s = "x1";
    float f = s.toFloat();
}
